app/assets/stylesheets/components/content/crown.css.scss
@import "../variables";

// ----------------------------------------------------
// ----------------MOBILE FIRST CSS -------------------
// ----------------------------------------------------

#content-template {
	margin: 0;
	border-radius: 10px;
	box-shadow: 2px 2px 6px 0 rgba(0,0,0,.15);

	.breadcrumb {
		background-color: $white;
		font: 16px Tahoma, Helvetica, Arial, sans-serif;
		padding: 3% 0 0 3%;
		margin: 0;
		overflow: hidden;
		li:last-child {
			font-weight: bold;
		}
		> li {
			color: $black;
			+ li:before {
				color: $black;
				padding: 0 0 0 4px;
				font-weight: normal;
			}
			a {
				cursor: pointer;
				color: $black;
			}
		}
	}

}

#crown {
	display: none;
}

// ----------------------------------------------------
// ---------------TABLET MEDIA QUERIES ----------------
// ----------------------------------------------------
@media (min-width: $screen-sm) {
	#content-template {
		h3 {
			color: $grayDark;
			font-family: 'Century Gothic', "Arial", sans-serif;
			text-align:center;
			font-size: 1em;
			margin: 0 auto;
			font-weight: bold;
		}
		#breadcrumb-region {
			margin: 0 0.9em;
			padding: 0.8em 15px;
			&.modview { padding: 0; }
		}

		.breadcrumb {
			background-color: transparent;
			font: 1em 'Century Gothic', "Arial", sans-serif;
			font-weight: bold;
			padding: 0;
			line-height: 1.1em;
			position: relative;
			left: 43.6%;
			width: 57%;
			overflow: hidden;
			height: 1.1em;
			-webkit-transition-property: all;
			-webkit-transition-duration: 1.2s;
			-webkit-transition-timing-function: ease-in-out;
			-webkit-transition-delay: 0.5s;
			transition-property: all;
			transition-duration: 1.2s;
			transition-timing-function: ease-in-out;
			transition-delay: 0.8s;
			&:hover { text-align: left;	}
			.chain-breadcrumb {	display: inline-block; }
			> li.root-breadcrumb a { color: $grayDark; }
		}
		.breadcrumb > li {
			margin: 0 auto;
			color: $grayDark;
			display: inline-block;
			+ li:before , &.chain-breadcrumb, &.chain-breadcrumb a {
				color: transparent;
				-webkit-transition-property: all;
				-webkit-transition-duration: 1.2s;
				-webkit-transition-timing-function: ease-out;
				-webkit-transition-delay: 0.4s;
				transition-property: all;
				transition-duration: 1.2s;
				transition-timing-function: ease-out;
				transition-delay: 0.4s;
			}
		}
		#breadcrumb-region:hover .breadcrumb {
			left: 0;
			width: 100%;
			overflow: visible;
			> li + li:before ,
			> li.chain-breadcrumb,
			> li.chain-breadcrumb a {
				color: $grayDark;
			}
		}

	}

	#crown {
		display: block;
		background: $white;
		padding: 3% 0 0% 3.5%;
		font-size: 20px;
		margin: 0 2.4%;
		border: 1px solid $grayUltraLight;
		border-top-right-radius: 2px;
		border-top-left-radius: 2px;
		border-bottom: none;
		-webkit-transition-property: border-color;
		-webkit-transition-duration: 1.0s;
		transition-property: border-color;
		transition-duration: 1.0s;
		.note-content {
			outline: none;
			padding-right: 5px;
		}
	}
}

// ----------------------------------------------------
// --------------LAPTOP MEDIA QUERIES -----------------
// ----------------------------------------------------
@media (min-width: $screen-md) {
	#content-template {
		h3 {
			font-size: 14px;
		}
		#breadcrumb-region {
			font-size: 14px;
			margin: 0 1em;
			padding: 0.9em 16px;
			&.modview { padding: 0; }
		}
		.breadcrumb {
			left: 44.7%;
		}
	}

	#crown {
		font-size: 22px;
		margin: 0 2%;
		padding: 3.5% 4% 0 4%;
		.note-content { padding-left: 12px; }
	}

}

// ----------------------------------------------------
// ---------------DESKTOP MEDIA QUERIES ---------------
// ----------------------------------------------------
@media (min-width: $screen-lg) {
}

